--- a/combined_style.css
+++ b/combined_style.css
@@ -152,7 +152,7 @@ header {
   background-color: #000;
   color: #fff;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   padding: 10px 20px;
   margin-bottom: 10px;
@@ -283,7 +283,7 @@ button.more:hover::after {
     margin-right: 5px;
   }
 
-  button.more,
+  button.more
   button.more::after {
     padding: 10px 14px;
     font-size: 14px;
@@ -296,7 +296,7 @@ button.more:hover::after {
   }
 
   header {
-    padding: 5px 10px;
+    padding: 30px 10px;
     margin-bottom: 5px;
     flex-direction: column;
   }
@@ -309,11 +309,22 @@ button.more:hover::after {
 @media screen and (max-width: 768px) {
   .nav-toggle {
     display: block;
+    margin-bottom: 20px; /* Add default margin bottom */
+    transition: margin-bottom 0.3s ease; /* Smooth transition for margin */
+  }
+
+
+  .header-logo {
+    margin-bottom: 20px; /* Add margin bottom to separate from nav-toggle */
   }
 
   .header-nav {
     display: none;
     flex-direction: column;
+    align-items: flex-start; /* Ensure items align correctly */
+    background-color: #000; /* Background to differentiate the menu */
+    padding: 10px; /* Padding to prevent overlapping */
+    width: 100%; /* Ensure the menu takes full width */
   }
 
   .header-nav.active {
@@ -323,11 +334,40 @@ button.more:hover::after {
   .header-nav ul {
     width: 100%;
     gap: 5px;
+    padding: 0;
+    margin: 0;
+    flex-direction: column; /* Ensure items are in column */
+  }
+
+  .header-nav ul li {
+    width: 100%;
   }
 
   .header-nav ul li a {
     display: block;
     padding: 10px;
+    width: 100%;
+    text-align: center; /* Align text to the center for better readability */
+    border-bottom: 1px solid #fff; /* Separate menu items */
+  }
+
+  .btn2 {
+    width: 100%; /* Make buttons take full width */
+    text-align: center; /* Center text in buttons */
+    margin-bottom: 10px; /* Add margin bottom for spacing */
+  }
+
+  header {
+    padding: 10px 20px;
+    margin-bottom: 10px;
+    width: 100%;
+    position: relative;
+    z-index: 1;
+    transition: all 0.3s ease; /* Smooth transition for header size */
+  }
+
+  header.active-header {
+    height: 450px; /* Adjust height as needed */
   }
 }
 
@@ -435,7 +475,7 @@ footer a:hover {
   justify-content: center;
   text-align: center;
   margin: auto;
-  width: 20%;
+  width: 50%;
   padding: 20px;
   margin-top: 4%;
 }
